# cerise-turtlebot3-nav

./: .bashrc_docker  .gitignore  .gitmodules  LICENSE  PROGRESS.md  README.md  docker-compose.yml  robots_config.yaml  set_initialposes.sh  setup.sh
.docker/: entrypoint.sh
install/: local_setup.sh  setup.sh
install/nav2_bringup/share/nav2_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/nav2_bringup/share/nav2_bringup/cmake/: nav2_bringupConfig-version.cmake  nav2_bringupConfig.cmake
install/nav2_bringup/share/nav2_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/nav2_bringup/share/nav2_bringup/launch/: bringup_launch.py  cloned_multi_tb3_simulation_launch.py  localization_launch.py  navigation_launch.py  (+4 more)
log/: latest_build
scripts/: docker-build.sh  docker-start.sh
src/: .cerise_4robots_launch.py.swp  waypoint_follower.py
src/cerise_4robots/: CMakeLists.txt  package.xml
src/cerise_4robots/launch/: cerise_2robots.py  cerise_4robots_fixed.py  cerise_4robots_launch.py
src/cerise_4robots/models/: robot1_waffle.model  robot2_waffle.model
src/cerise_4robots/params/: nav2_multirobot_params_3.yaml  nav2_multirobot_params_4.yaml
src/cerise_nav/: package.xml  setup.cfg  setup.py
src/cerise_nav/cerise_nav/: demand_generator.py  task_allocator.py
src/meu_teste_cpp/: CMakeLists.txt  package.xml
src/meu_teste_cpp/src/: publisher_node.cpp
src/multi_robot_nav/launch/: complete_dual_nav.launch.py  dual_robot_nav.launch.py  multi_nav2.launch.py  single_robot1_nav.launch.py
(+13 files in other folders)
