<?xml version="1.0"?>
<package format="3">
  <name>cerise_4robots</name>
  <version>0.2.0</version>
  <description>4-robot multi-robot navigation for CERISE 5G logistics</description>
  <maintainer email="yan@cerise.ufg.br">Yan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>nav2_bringup</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>nav2_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
