<?xml version="1.0"?>
<package format="3">
  <name>cerise_nav</name>
  <version>0.0.1</version>
  <description>Multi-robot task allocation - CERISE UFG</description>
  <maintainer email="yan@ufg.br">Yan Santos</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
